added team handlers
